# gttp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  books.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.cache/pages/: atomic-habits.json  boundaries.json  deep-work.json  eat-that-frog.json  ego-is-the-enemy.json  emotional-intelligence.json  essentialism.json  four-thousand-weeks.json  grit.json  how-to-begin.json  influence.json  meditations.json  mindset.json  never-split-the-difference.json  no-more-mr-nice-guy.json  the-7-habits-of-highly-effective-people.json  the-alchemist.json  the-comfort-crisis.json  the-compound-effect.json  the-courage-to-be-disliked.json  the-happiness-trap.json  the-magic-of-thinking-big.json  the-mountain-is-you.json  the-obstacle-is-the-way.json  thinking-fast-and-slow.json  thinking-in-bets.json  tiny-experiments.json  why-has-nobody-told-me-this-before.json  why-we-sleep.json
.github/workflows/: build.yml
docs/: plan-playwright-reddit.md
fixtures/: atomic-habits.json  deep-work.json  the-7-habits-of-highly-effective-people.json
src/gttp/: __init__.py  cache.py  cli.py  config.py  covers.py  models.py  pipeline.py  publish.py  ranking.py  reddit_client.py  synthesize.py
tests/: test_covers.py  test_pipeline.py  test_reddit_parsing.py
